# cmdbench

./: .gitattributes  .gitignore  LICENSE  README.md  benchmark-graphs.ipynb  benchmark-research.ipynb  benchmark-run.py  benchmark-sting.ipynb  benchmark-usage.ipynb  pyproject.toml  setup.py  test.js
.github/workflows/: release.yml
bioinformatics/: multibench.py
bioinformatics/bigsi/compare-input-sizes/: .gitignore  Benchmark-BIGSI-generalized-func.ipynb  Benchmark-BIGSI.ipynb
bioinformatics/cobs/compare-input-sizes/: Benchmark-COBS.ipynb
bioinformatics/complexity-measurement/: .gitignore
bioinformatics/complexity-measurement/bigsi/: Benchmark-BIGSI-generalized-func.ipynb  benchmark-bigsi-generalized-func.ipynb  berkleydb.yaml
bioinformatics/complexity-measurement/cobs/: Benchmark-COBS.ipynb  multibench_results.txt
bioinformatics/complexity-measurement/mash/: Benchmark-Mash.ipynb
bioinformatics/complexity-measurement/mentalist/: benchmark-mentalist.ipynb  multibench_results.txt
bioinformatics/complexity-measurement/skesa/: Benchmark-skesa.ipynb  multibench_results.txt
bioinformatics/complexity-measurement/snapperdb/: Benchmark-SnapperDB.ipynb  config.txt
bioinformatics/complexity-measurement/snippy/: benchmark-snippy.ipynb  multibench_results.txt  samples.tab  snippy-commands.sh
bioinformatics/complexity-measurement/sting/: benchmark-sting.ipynb  multibench_results.txt
cmdbench/: __init__.py  cli.py  cmdbench.py  core.py  keys_dict.py  result.py  utils.py
tests/bioinformatics/: .gitignore  Benchmark-BIGSI.ipynb  berkleydb.yaml  bioi-benchmark.py
tests/disk/: disk-test.ipynb  read_binary_test  read_binary_test.cpp  read_binary_test.py  write_test.js
tests/disk/files/: file0.test  file1.test  file10.test  file11.test  file12.test  file13.test  file14.test  file15.test  file16.test  file17.test  file18.test  file19.test  file2.test  file20.test  file21.test  file22.test  file23.test  file24.test  file25.test  file26.test  file27.test  file28.test  file29.test  file3.test  file30.test  file31.test  file32.test  file33.test  file34.test  file35.test  file36.test  file37.test  file38.test  file39.test  file4.test  file40.test  file41.test  file42.test  file43.test  file44.test  (+60 more)
tests/get-child-processes/: Untitled.ipynb  deep-child-processes-test.js  get-child-processes.py  get-children.sh
